--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
             android:name=".DetailActivity"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait"></activity>
+
+        <provider
+            android:name="com.example.android.moviemagic.data.FavouriteContentProvider"
+            android:authorities="com.example.android.moviemagic"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
